# zmqmessage

./: .gitignore  CMakeLists.txt  Doxyfile  README  description
CMakeModules/: FindZeroMQ.cmake
doxygen_input/: doc_pages.hpp  doxygen.css  footer_inc.html  header_inc.html
examples/: CMakeLists.txt  StringFace.hpp  zasync.cpp  zbisort.cpp  zqueue.cpp  zserialize.cpp  zsort.cpp
include/: CMakeLists.txt  ZmqMessage.hpp  ZmqMessageFwd.hpp  ZmqMessageImpl.hpp  ZmqTools.hpp
include/zmqmessage/: Config.hpp  DelObj.hpp  Incoming.hpp  Manip.hpp  MetaTypes.hpp  MsgPtrVec.hpp  Multipart.hpp  MultipartContainer.hpp  NonCopyable.hpp  Observers.hpp  OutOptions.hpp  Outgoing.hpp  Part.hpp  PartsStorage.hpp  PartsVec.hpp  RawMessage.hpp  Routing.hpp  ScopedAlloc.hpp  Sink.hpp  StrTypes.hpp  TypeCheck.hpp  ZmqMessageFullImpl.hpp  ZmqMessageImpl.hpp  ZmqMessageTemplateImpl.hpp  ZmqToolsFullImpl.hpp  dll.hpp  exceptions.hpp  send.hpp
src/: CMakeLists.txt  ZmqMessage.cpp  ZmqTools.cpp
tests/: CMakeLists.txt  PerfTest.cpp  SimpleTest.cpp
